@@ -1,6 +1,9 @@
 //Tags: JDK1.2
+
 //Uses: getBeanInfoTestClass
+
 //Copyright (C) 2004  Robert Schuster <theBohemian@gmx.net>
+
 //Mauve is free software; you can redistribute it and/or modify
 //it under the terms of the GNU General Public License as published by
 //the Free Software Foundation; either version 2, or (at your option)
@@ -26,18 +29,17 @@ import java.beans.MethodDescriptor;
 import java.lang.reflect.Method;
 
 /** This tests the <strong>method</strong> retrieving mechanism of the
- * Introspector class.<br/>
- * <br/>
- * See {@link getBeanInfoTestClass} for details on what is
- * expected.<br/>
- * <br/>
- * The method test goes like this:
- * There is a test class having a number of well-known methods. All
+ * Introspector class.
+ * 
+ * <p>See {@link getBeanInfoTestClass} for details on what is
+ * expected.</p>
+ * 
+ * <p>The method test goes like this:</p>
+ * <p>There is a test class having a number of well-known methods. All
  * <code>public</code> methods should be available in a
  * <code>MethodDescriptor</code> array. There are two methods
  * which are not <code>public</code> and these should not be
- * available in the array.
- * <br/>
+ * available in the array.</p>
  * 
  * @author Robert Schuster <theBohemian@gmx.net>
  */
